# fast-version

./: Cargo.toml  README.md
fast-version-core/: Cargo.toml
fast-version-core/src/: lib.rs  version.rs  version_req.rs
fast-version-derive/: Cargo.toml
fast-version-derive/src/: lib.rs
src/: lib.rs
tests/: fast_version_const.rs
