[package]
name = "fast-version"
version = "0.2.1"
edition = "2021"
description = "Fast version requirenments and matching"
license = "MIT"

[workspace]
members = [".", "fast-version-derive", "fast-version-core"]

[dependencies]
fast-version-core = {version = "0.2.1", path = "fast-version-core" }
fast-version-derive = {version = "0.1.1", path = "fast-version-derive" }

[features]
default = ["alloc"]
serde = ["fast-version-core/serde"]
alloc = []
nightly = ["fast-version-core/nightly"]

