[package]
name = "fast-version-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
regex = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = ["alloc"]
serde = ["dep:serde"]
alloc = []
