[package]
name = "fast-version-core"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "Core definitions for the fast-version crate"
repository = "https://github.com/umgefahren/fast-version"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = ["alloc"]
serde = ["dep:serde"]
alloc = []
nightly = []
